--- a/.gitignore
+++ b/.gitignore
@@ -42,6 +42,16 @@ next-env.d.ts
 
 /media
 
+# SQLite databases
+*.db
+*.db-shm
+*.db-wal
+*.sqlite
+*.sqlite3
+
+# Claude Code local settings
+.claude/settings.local.json
+
 # Playwright
 node_modules/
 /test-results/
