docs: complete Phase 1 foundation documentation
## Documentation Added

### Environment Configuration
- Enhanced .env.example with comprehensive documentation
- Documented all current and future environment variables
- Added setup instructions and examples for development/production

### README.md
- Complete Infoshop-specific setup guide
- Detailed project structure documentation
- All collections documented with usage examples
- API endpoint examples (REST + GraphQL)
- Development workflow and commands
- Troubleshooting quick reference
- Migration context and status

### Claude Code Slash Commands
- /generate-types - Generate TypeScript types from collections
- /generate-importmap - Fix component loading issues
- /payload-dev - Start dev server with troubleshooting guide

### Standard Operating Procedures (SOPs)
- adding-collections.md - Step-by-step guide for creating collections
  - Field types reference
  - Access control patterns
  - Hooks and validation examples
- troubleshooting.md - Comprehensive troubleshooting guide
  - Development server issues
  - Database problems
  - Build and cache issues
  - API and authentication
  - Quality hooks
  - Environment variables
  - Complete reset procedures

## Benefits

- New developers can set up project following README
- Common issues have documented solutions
- Consistent patterns for adding features
- Reduced context switching with .agent system
- Quality enforcement through hooks documentation

Addresses HAR-61 Tasks:
- ✅ Update README.md with Payload-specific setup
- ✅ Document collection schemas in .agent/system/
- ✅ Create development guide
- ✅ Add troubleshooting section

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,102 @@
-DATABASE_URI=mongodb://127.0.0.1/your-database-name
-PAYLOAD_SECRET=YOUR_SECRET_HERE
+# Infoshop Payload CMS - Environment Variables
+# Copy this file to .env.local and fill in your actual values
+# Do not commit .env.local to version control
+
+# ============================================================
+# DATABASE CONFIGURATION
+# ============================================================
+
+# SQLite (Development - Default)
+# File-based database, no server required
+# Path is relative to project root
+DATABASE_URI=file:./infoshop-blank.db
+
+# PostgreSQL (Production - Recommended)
+# Uncomment and configure for production deployment
+# Format: postgresql://username:password@host:port/database
+# DATABASE_URI=postgresql://user:password@localhost:5432/infoshop_payload
+
+# ============================================================
+# PAYLOAD CMS CONFIGURATION
+# ============================================================
+
+# Payload Secret Key (REQUIRED)
+# Used for JWT token signing and encryption
+# Generate a secure random string: openssl rand -base64 32
+# NEVER commit the actual secret to version control
+PAYLOAD_SECRET=YOUR_SECRET_HERE_CHANGE_ME
+
+# ============================================================
+# NEXT.JS CONFIGURATION
+# ============================================================
+
+# Server URL (REQUIRED)
+# The full URL where your application is hosted
+# Development:
+NEXT_PUBLIC_SERVER_URL=http://localhost:3000
+
+# Production examples:
+# NEXT_PUBLIC_SERVER_URL=https://infoshop.example.com
+# NEXT_PUBLIC_SERVER_URL=https://your-vercel-deployment.vercel.app
+
+# ============================================================
+# OPTIONAL CONFIGURATION
+# ============================================================
+
+# Node Environment
+# Automatically set by hosting providers
+# NODE_ENV=production
+
+# Server Port (Optional)
+# Defaults to 3000 if not specified
+# PORT=3000
+
+# Email Configuration (Future)
+# Uncomment when email functionality is added
+# EMAIL_FROM=noreply@infoshop.example.com
+# SMTP_HOST=smtp.example.com
+# SMTP_PORT=587
+# SMTP_USER=your-smtp-username
+# SMTP_PASS=your-smtp-password
+
+# Storage Configuration (Future - S3/Cloud)
+# Uncomment when migrating from local to cloud storage
+# S3_BUCKET=your-bucket-name
+# S3_REGION=ap-southeast-2
+# S3_ACCESS_KEY_ID=your-access-key
+# S3_SECRET_ACCESS_KEY=your-secret-key
+
+# Square POS Integration (Phase 3)
+# Uncomment when Square integration is implemented
+# SQUARE_ACCESS_TOKEN=your-square-access-token
+# SQUARE_LOCATION_ID=your-square-location-id
+# SQUARE_ENVIRONMENT=sandbox  # or 'production'
+
+# ============================================================
+# SETUP INSTRUCTIONS
+# ============================================================
+
+# 1. Copy this file:
+#    cp .env.example .env.local
+#
+# 2. Generate a secure PAYLOAD_SECRET:
+#    openssl rand -base64 32
+#
+# 3. Update DATABASE_URI if using PostgreSQL
+#
+# 4. Update NEXT_PUBLIC_SERVER_URL for your environment
+#
+# 5. Run the development server:
+#    npm run dev
+#
+# 6. Create your first admin user at:
+#    http://localhost:3000/admin
+
+# ============================================================
+# NOTES
+# ============================================================
+
+# - .env.local is gitignored and should contain your actual values
+# - .env.example is committed and should contain only placeholders
+# - Environment variables prefixed with NEXT_PUBLIC_ are exposed to the browser
+# - See docs: https://nextjs.org/docs/app/building-your-application/configuring/environment-variables
