--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "test:int": "cross-env NODE_OPTIONS=--no-deprecation vitest run --config ./vitest.config.mts"
   },
   "dependencies": {
+    "@payloadcms/db-sqlite": "3.62.0",
     "@payloadcms/next": "3.62.0",
     "@payloadcms/payload-cloud": "3.62.0",
     "@payloadcms/richtext-lexical": "3.62.0",
@@ -30,11 +31,11 @@
     "payload": "3.62.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "sharp": "0.34.2",
-    "@payloadcms/db-sqlite": "3.62.0"
+    "sharp": "0.34.2"
   },
   "devDependencies": {
     "@playwright/test": "1.54.1",
+    "@prisma/client": "^6.18.0",
     "@testing-library/react": "16.3.0",
     "@types/node": "^22.5.4",
     "@types/react": "19.1.8",
@@ -46,6 +47,8 @@
     "playwright": "1.54.1",
     "playwright-core": "1.54.1",
     "prettier": "^3.4.2",
+    "prisma": "^6.18.0",
+    "tsx": "^4.20.6",
     "typescript": "5.7.3",
     "vite-tsconfig-paths": "5.1.4",
     "vitest": "3.2.3"
