--- a/.env.example
+++ b/.env.example
@@ -66,11 +66,11 @@ NEXT_PUBLIC_SERVER_URL=http://localhost:3000
 # S3_ACCESS_KEY_ID=your-access-key
 # S3_SECRET_ACCESS_KEY=your-secret-key
 
-# Square POS Integration (Phase 3)
-# Uncomment when Square integration is implemented
-# SQUARE_ACCESS_TOKEN=your-square-access-token
-# SQUARE_LOCATION_ID=your-square-location-id
-# SQUARE_ENVIRONMENT=sandbox  # or 'production'
+# Square POS Integration (Phase 3 - ACTIVE)
+# Get credentials from: https://developer.squareup.com
+SQUARE_ACCESS_TOKEN=your-square-access-token-here
+SQUARE_ENVIRONMENT=sandbox  # 'sandbox' for testing or 'production' for live
+# SQUARE_LOCATION_ID=your-square-location-id  # Optional: for inventory sync
 
 # ============================================================
 # SETUP INSTRUCTIONS
