--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "payload": "3.62.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "sharp": "0.34.2"
+    "sharp": "0.34.2",
+    "square": "^43.2.0"
   },
   "devDependencies": {
     "@playwright/test": "1.54.1",
