security: Address comprehensive security review feedback
Critical Fixes:
- Fix array indexing assumption - now matches by temporary ID instead of array position
- Add input validation for book data (title, prices, currency)
- Replace 'as any' casts with proper SquareCatalogObject interface
- Extract magic numbers to named constants (SQUARE_MAX_BATCH_SIZE, SQUARE_RATE_LIMIT_DELAY_MS)

Medium Priority Improvements:
- Consolidate batch processing - use single batchUpsert for both creates and updates
- Add pagination support for >1000 books (handles unlimited dataset size)
- Add authentication to API endpoint with Bearer token (SQUARE_SYNC_API_KEY)
- Add bookIds format validation to prevent injection attacks
- Add request size limit (max 1000 bookIds per request) to prevent DoS

Security Enhancements:
- Validate bookIds against regex pattern /^[a-zA-Z0-9-_]+$/
- Require API key authentication for all sync operations
- Add service configuration check with appropriate error handling
- Document API key requirement in .env.example

Performance Improvements:
- Unified batch processing reduces API calls by ~50% for mixed create/update operations
- Pagination prevents memory issues with large datasets
- Improved object matching using Map for O(1) lookups

All tests passing (9/9 integration tests).
TypeScript strict mode compliance maintained.

--- a/.env.example
+++ b/.env.example
@@ -72,6 +72,11 @@ SQUARE_ACCESS_TOKEN=your-square-access-token-here
 SQUARE_ENVIRONMENT=sandbox  # 'sandbox' for testing or 'production' for live
 # SQUARE_LOCATION_ID=your-square-location-id  # Optional: for inventory sync
 
+# Square Sync API Key (Required for /api/square/sync endpoint)
+# Generate a secure random string: openssl rand -base64 32
+# Used to authenticate Square sync requests
+SQUARE_SYNC_API_KEY=your-square-sync-api-key-here
+
 # ============================================================
 # SETUP INSTRUCTIONS
 # ============================================================
