chore: Rename database from infoshop-blank to infoshop
Updates database filename to use project name without -blank suffix.

Changes:
- Update .env.example DATABASE_URI to use infoshop.db
- Auto-generated payload-types.ts formatting updates (semicolons)

Note: .env file updated locally but not committed (gitignored)

--- a/.env.example
+++ b/.env.example
@@ -9,7 +9,7 @@
 # SQLite (Development - Default)
 # File-based database, no server required
 # Path is relative to project root
-DATABASE_URI=file:./infoshop-blank.db
+DATABASE_URI=file:./infoshop.db
 
 # PostgreSQL (Production - Recommended)
 # Uncomment and configure for production deployment
