--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "infoshop-blank",
+  "name": "infoshop",
   "version": "1.0.0",
-  "description": "A blank template to get started with Payload 3.0",
+  "description": "Infoshop bookstore management system built with Payload CMS",
   "license": "MIT",
   "type": "module",
   "scripts": {
