feat: Implement Phase 4.5 Customer Storefront with Tailwind v4
Implements a complete customer-facing storefront for browsing and discovering books.
Built with Next.js 15 Server Components, Tailwind CSS v4, and Shadcn/ui components.

## Features Implemented

### UI Foundation (Tailwind v4 + Shadcn/ui)
- Configured Tailwind CSS v4 with @import and @theme syntax
- Installed Shadcn/ui component primitives (Button, Card, Badge, Input, Select)
- Created utility functions for styling (cn) and formatting (formatPrice, stock helpers)
- Responsive design with mobile-first approach

### Public Layout
- Header with navigation (Shop, Categories, Subjects)
- Search and cart icon buttons
- Footer with company information and links
- Sticky header with backdrop blur effect

### Book Browsing
- **Shop Page** (/shop)
  - Grid view of all available books
  - Server-side pagination (20 books per page)
  - Search by title, author, or ISBN
  - Sort by newest, title, price (low-high, high-low)
  - Filters out out-of-stock and discontinued items

- **Book Detail Page** (/shop/[id])
  - Full book information display
  - Cover image with fallback
  - Pricing (retail and member prices)
  - Stock status badges
  - Book metadata (ISBN, publisher, pages, format)
  - Category and subject tags
  - Add to cart button (disabled for out-of-stock)

### Category Browsing
- **Categories Index** (/shop/categories)
  - Grid of all categories with book counts
  - Links to individual category pages

- **Category Page** (/shop/categories/[slug])
  - Books filtered by category
  - Paginated results
  - Category description

### Subject Browsing
- **Subjects Index** (/shop/subjects)
  - Grid of all subject tags with book counts
  - Links to individual subject pages

- **Subject Page** (/shop/subjects/[slug])
  - Books filtered by subject
  - Paginated results
  - Subject description

### Home Page
- Hero section with call-to-action buttons
- "New Arrivals" section showing 8 newest books
- "Browse by Category" 

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,7 +22,8 @@
       "@/*": ["./src/*"],
       "@payload-config": ["./src/payload.config.ts"]
     },
-    "target": "ES2022"
+    "target": "ES2022",
+    "types": ["vitest/globals"]
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
   "exclude": ["node_modules"]
