--- a/package.json
+++ b/package.json
@@ -24,31 +24,40 @@
     "@payloadcms/payload-cloud": "3.62.0",
     "@payloadcms/richtext-lexical": "3.62.0",
     "@payloadcms/ui": "3.62.0",
+    "@radix-ui/react-select": "^2.2.6",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "cross-env": "^7.0.3",
     "dotenv": "16.4.7",
     "graphql": "^16.8.1",
+    "lucide-react": "^0.552.0",
     "next": "15.4.4",
     "payload": "3.62.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "sharp": "0.34.2",
-    "square": "^43.2.0"
+    "square": "^43.2.0",
+    "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
     "@playwright/test": "1.54.1",
     "@prisma/client": "^6.18.0",
+    "@tailwindcss/postcss": "^4.1.16",
     "@testing-library/react": "16.3.0",
     "@types/node": "^22.5.4",
     "@types/react": "19.1.8",
     "@types/react-dom": "19.1.6",
     "@vitejs/plugin-react": "4.5.2",
+    "autoprefixer": "^10.4.21",
     "eslint": "^9.16.0",
     "eslint-config-next": "15.4.4",
     "jsdom": "26.1.0",
     "playwright": "1.54.1",
     "playwright-core": "1.54.1",
+    "postcss": "^8.5.6",
     "prettier": "^3.4.2",
     "prisma": "^6.18.0",
+    "tailwindcss": "^4.1.16",
     "tsx": "^4.20.6",
     "typescript": "5.7.3",
     "vite-tsconfig-paths": "5.1.4",
