--- a/.env.example
+++ b/.env.example
@@ -66,16 +66,24 @@ NEXT_PUBLIC_SERVER_URL=http://localhost:3000
 # S3_ACCESS_KEY_ID=your-access-key
 # S3_SECRET_ACCESS_KEY=your-secret-key
 
-# Square POS Integration (Phase 3 - ACTIVE)
+# Square POS Integration (Phase 3 & 4 - ACTIVE)
 # Get credentials from: https://developer.squareup.com
 SQUARE_ACCESS_TOKEN=your-square-access-token-here
 SQUARE_ENVIRONMENT=sandbox  # 'sandbox' for testing or 'production' for live
-# SQUARE_LOCATION_ID=your-square-location-id  # Optional: for inventory sync
+
+# Square Location & Application (Required for payments - Phase 4.6)
+NEXT_PUBLIC_SQUARE_APPLICATION_ID=your-square-application-id
+NEXT_PUBLIC_SQUARE_LOCATION_ID=your-square-location-id
 
 # Square Sync API Key (Required for /api/square/sync endpoint)
 # Generate a secure random string: openssl rand -base64 32
 # Used to authenticate Square sync requests
 SQUARE_SYNC_API_KEY=your-square-sync-api-key-here
+
+# Shopping Cart Encryption (Phase 4.6 - ACTIVE)
+# Used to encrypt cart data in cookies
+# Generate a secure random string: openssl rand -base64 32
+CART_ENCRYPTION_SECRET=your-cart-encryption-secret-here
 
 # ============================================================
 # SETUP INSTRUCTIONS
