--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "jose": "^6.1.0",
     "lucide-react": "^0.552.0",
     "next": "15.4.4",
+    "papaparse": "^5.5.3",
     "payload": "3.62.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
@@ -48,6 +49,7 @@
     "@tailwindcss/postcss": "^4.1.16",
     "@testing-library/react": "16.3.0",
     "@types/node": "^22.5.4",
+    "@types/papaparse": "^5.5.0",
     "@types/react": "19.1.8",
     "@types/react-dom": "19.1.6",
     "@vitejs/plugin-react": "4.5.2",
