--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "generate:types": "cross-env NODE_OPTIONS=--no-deprecation payload generate:types",
     "lint": "cross-env NODE_OPTIONS=--no-deprecation next lint",
     "payload": "cross-env NODE_OPTIONS=--no-deprecation payload",
+    "seed:theme": "cross-env NODE_OPTIONS='--no-deprecation --require dotenv/config' tsx src/scripts/seed-theme.ts",
     "start": "cross-env NODE_OPTIONS=--no-deprecation next start",
     "test": "pnpm run test:int && pnpm run test:e2e",
     "test:e2e": "cross-env NODE_OPTIONS=\"--no-deprecation\" pnpm exec playwright test",
@@ -24,11 +25,14 @@
     "@payloadcms/payload-cloud": "3.62.0",
     "@payloadcms/richtext-lexical": "3.62.0",
     "@payloadcms/ui": "3.62.0",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-select": "^2.2.6",
+    "@radix-ui/react-slot": "^1.2.4",
     "@square/web-payments-sdk-types": "^1.79.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cross-env": "^7.0.3",
+    "date-fns": "^4.1.0",
     "dotenv": "16.4.7",
     "graphql": "^16.8.1",
     "jose": "^6.1.0",
