feat(bookLookup): migrate WorldCat to secure HTTPS Metadata API
Upgrade WorldCat integration to use the modern Metadata API:

**SECURITY IMPROVEMENT:**
- Use HTTPS WorldCat Metadata API when credentials available
- Add OAuth authentication support using WSKey (Basic Auth)
- Graceful fallback to legacy HTTP Classify API if no credentials

**API CHANGES:**
- Primary: https://metadata.api.oclc.org/classify/v1/isbn/{isbn}
- Fallback: http://classify.oclc.org/classify2/Classify (legacy)
- Requires: WORLDCAT_API_KEY and WORLDCAT_SECRET environment variables

**CONFIGURATION:**
- Added environment variables documentation to .env.example
- Clear instructions on how to obtain WSKey credentials
- Optional: Works without credentials using legacy API

**BENEFITS:**
- Secure HTTPS communication when credentials provided
- Better rate limits with authenticated requests
- Backward compatible with existing deployments

Get WSKey: https://www.oclc.org/developer/develop/authentication/how-to-request-a-wskey.en.html

--- a/.env.example
+++ b/.env.example
@@ -86,6 +86,21 @@ SQUARE_SYNC_API_KEY=your-square-sync-api-key-here
 CART_ENCRYPTION_SECRET=your-cart-encryption-secret-here
 
 # ============================================================
+# BOOK LOOKUP API CONFIGURATION (Optional)
+# ============================================================
+
+# Google Books API (Optional - Increases rate limits)
+# Get API key from: https://console.cloud.google.com/apis/credentials
+# Without this, Google Books API still works but with lower rate limits
+# GOOGLE_BOOKS_API_KEY=your-google-books-api-key-here
+
+# WorldCat Metadata API (Optional - Enables HTTPS for WorldCat)
+# Get WSKey credentials from: https://www.oclc.org/developer/develop/authentication/how-to-request-a-wskey.en.html
+# Without these, falls back to legacy HTTP Classify API (less secure)
+# WORLDCAT_API_KEY=your-worldcat-wskey-client-id
+# WORLDCAT_SECRET=your-worldcat-wskey-secret
+
+# ============================================================
 # SETUP INSTRUCTIONS
 # ============================================================
 
