--- a/.dockerignore
+++ b/.dockerignore
@@ -19,7 +19,7 @@ out
 *.sqlite3
 
 # Claude Code
-.claude/settings.local.json
+.claude/
 
 # Git
 .git
@@ -31,6 +31,14 @@ out
 # OS
 .DS_Store
 Thumbs.db
+
+# Logs
+*.log
+logs/
+
+# Temp
+tmp/
+.tmp/
 
 # Testing
 coverage
