--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "test:int": "cross-env NODE_OPTIONS=--no-deprecation vitest run --config ./vitest.config.mts"
   },
   "dependencies": {
+    "@payloadcms/db-postgres": "^3.62.0",
     "@payloadcms/db-sqlite": "3.62.0",
     "@payloadcms/next": "3.62.0",
     "@payloadcms/payload-cloud": "3.62.0",
