feat: filesystem theme engine + GSAP cinematic frontend overhaul
Replace the 730-line flat-field Theme.ts global with a filesystem theme
engine where themes are self-contained packages in themes/. The admin
selects the active theme and can layer color/typography overrides on top.

Theme engine:
- themes/ directory with manifest.json + variables.css per theme
- src/lib/themes.ts discovery system (cached fs scan at module load)
- Theme.ts rewritten to ~155 lines with dynamic select from filesystem
- ThemeProvider rewritten: sets data-theme attr, applies override inline styles
- Layout loads theme CSS + Google Fonts via <link> in <head>
- Build script copies theme assets to public/themes/
- Three themes: organic-tech (flagship), default (migrated), radical (migrated)

Cinematic animations (GSAP):
- ScrollReveal: scroll-triggered fade+translate entrance
- StaggerReveal: staggered children entrance on scroll
- ParallaxSection: parallax background scroll effect
- MagneticButton: magnetic cursor-following hover effect
- MorphingNavbar: transparent → backdrop-blur on scroll
- NoiseOverlay: SVG feTurbulence noise at theme-controlled opacity
- All respect prefers-reduced-motion: reduce

Component upgrades:
- Hero, BookShowcase, CallToAction, Archive blocks wrapped with animations
- Header/HeaderDynamic use MorphingNavbar
- Footer/FooterDynamic columns use staggered ScrollReveal
- BookCard/EventCard use CSS card-hover-lift effect
- All headings use font-heading, prices use font-mono
- Shop, events, cart, checkout pages get ScrollReveal headings

Also fixes: use static import for @payloadcms/db-sqlite instead of
dynamic require() that broke in newer Node/webpack.

--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "license": "MIT",
   "type": "module",
   "scripts": {
+    "prebuild": "node scripts/copy-theme-assets.mjs",
     "build": "cross-env NODE_OPTIONS=\"--no-deprecation --max-old-space-size=8000\" next build",
+    "predev": "node scripts/copy-theme-assets.mjs",
     "dev": "cross-env NODE_OPTIONS=--no-deprecation next dev",
-    "devsafe": "rm -rf .next && cross-env NODE_OPTIONS=--no-deprecation next dev",
+    "devsafe": "rm -rf .next && node scripts/copy-theme-assets.mjs && cross-env NODE_OPTIONS=--no-deprecation next dev",
     "format": "prettier --write \"src/**/*.{ts,tsx,js,jsx}\"",
     "generate:importmap": "cross-env NODE_OPTIONS=--no-deprecation payload generate:importmap",
     "generate:types": "cross-env NODE_OPTIONS=--no-deprecation payload generate:types",
@@ -20,6 +22,7 @@
     "test:int": "cross-env NODE_OPTIONS=--no-deprecation vitest run --config ./vitest.config.mts"
   },
   "dependencies": {
+    "@gsap/react": "^2.1.2",
     "@payloadcms/db-postgres": "3.62.0",
     "@payloadcms/db-sqlite": "3.62.0",
     "@payloadcms/next": "3.62.0",
@@ -36,6 +39,7 @@
     "date-fns": "^4.1.0",
     "dotenv": "16.4.7",
     "graphql": "^16.8.1",
+    "gsap": "^3.14.2",
     "jose": "^6.1.0",
     "lucide-react": "^0.552.0",
     "next": "15.4.8",
