fix: add pg dependency and drop all legacy theme columns
The migration script failed because pg was only a transitive
dependency and pnpm's strict resolution prevented importing it.
Added pg as a direct dependency.

Also discovered a second set of legacy columns (default_*) in
addition to radical_*. Now drops both legacy prefixes so
drizzle-kit push completes without interactive prompts.

--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "next": "15.4.8",
     "papaparse": "^5.5.3",
     "payload": "3.62.0",
+    "pg": "^8.19.0",
     "react": "19.1.2",
     "react-dom": "19.1.2",
     "sharp": "0.34.2",
@@ -58,6 +59,7 @@
     "@testing-library/react": "16.3.0",
     "@types/node": "^22.5.4",
     "@types/papaparse": "^5.5.0",
+    "@types/pg": "^8.16.0",
     "@types/react": "19.1.8",
     "@types/react-dom": "19.1.6",
     "@vitejs/plugin-react": "4.5.2",
