feat: add URL slugs for books with ISBN redirect route
Add auto-generated URL slugs to the Books collection for SEO-friendly
URLs. Route changes from /shop/[id] to /shop/[slug] with numeric ID
fallback for backward compatibility. Adds /isbn/:isbn canonical
redirect route (301) and a backfill migration script.

Fixes reviewed bugs: backfill script now uses skipInventoryHooks context
to prevent calculateStockStatus from corrupting stockStatus to
OUT_OF_STOCK; slug generation only triggers on explicit clear (not
every update); like query results filtered in-memory for accurate
prefix matching; ISBN route validates format before DB query.

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "lint": "cross-env NODE_OPTIONS=--no-deprecation next lint",
     "payload": "cross-env NODE_OPTIONS=--no-deprecation payload",
     "seed:theme": "cross-env NODE_OPTIONS='--no-deprecation --require dotenv/config' tsx src/scripts/seed-theme.ts",
+    "backfill:book-slugs": "cross-env NODE_OPTIONS='--no-deprecation --require dotenv/config' tsx src/scripts/backfill-book-slugs.ts",
     "start": "cross-env NODE_OPTIONS=--no-deprecation next start",
     "test": "pnpm run test:int && pnpm run test:e2e",
     "test:e2e": "cross-env NODE_OPTIONS=\"--no-deprecation\" pnpm exec playwright test",
